casia-angular/src/views/main-page/main-page.component.scss
.sidebar {
  position: absolute;
  z-index: 213777;
  height: 100%;
  width: 20vw;
  top: 64px;
  background: none;

  &__content {
    width: 100%;
    display: flex;
    flex-direction: column;
  }

  &__button {
    width: 100%;
    color: #333 ;
  }
}

.sidenav {
  position: relative;
}

